1. turn new tool run api endpoint to create new step endpoint. 2. we now first create a step, then run the tool using the previously created and already existing/setup endpoint of tool_rerun. 3. step gets immediately added to the graph now. at the correct place. 4. all data generated so far anywhere in teh graph is now available in a new step creation. (earlier was only data generated by ancestors aka stuff above this node in the graph) 5. turn some logging functions into ones that print the log as well so we don't have to wrap it in print(). just for cleaner code. 6. add a pre_run_message to the rerun websocket. just as a flag for the front end about what is going to be run now aka what to expect in the next incoming yield. Will eventually add some indicators on the front end. 7. add a hook inside handleReRun, which allows actions to be done before we ask the backend to re run a step. 8. some checks and balances in the input UIs for the tools.

--- a/styles/blocknote-styles.scss
+++ b/styles/blocknote-styles.scss
@@ -285,9 +285,6 @@ $grid: repeating-linear-gradient(
 }
 
 .graph {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
 
   .graph-node-loading {
@@ -467,12 +464,13 @@ $grid: repeating-linear-gradient(
     .hide {
       opacity: 0;
     }
+
+    &.graph-node-re-running {
+      border: 1px solid $medium-orange;
+    }
   }
   svg {
-    position: absolute;
     z-index: 1;
-    top: 0;
-    left: 0;
     path.link {
       stroke-dasharray: 450;
       stroke-dashoffset: 450;
@@ -915,6 +913,12 @@ $grid: repeating-linear-gradient(
             font-weight: bold;
             font-size: 0.8em;
             cursor: pointer;
+
+            &.tool-re-run-loading {
+              background-color: $text-very-light;
+              color: $text-light;
+              cursor: default;
+            }
           }
 
           .tool-input-list {
